--- a/BeamCounter/MainWindow.xaml
+++ b/BeamCounter/MainWindow.xaml
@@ -6,7 +6,12 @@
         xmlns:local="clr-namespace:BeamCounter"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+    <Grid Margin="0,0,2,2">
+        <Label x:Name="viewer" Content="Viewer Count" HorizontalAlignment="Left" Margin="34,38,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="follow" Content="Follower Count" HorizontalAlignment="Left" Margin="30,84,0,0" VerticalAlignment="Top" Width="92" Height="24"/>
+        <ProgressBar HorizontalAlignment="Left" Height="14" Margin="170,293,0,0" VerticalAlignment="Top" Width="335"/>
+        <Button x:Name="blogin" Content="Beam Login" HorizontalAlignment="Left" Margin="430,266,0,0" VerticalAlignment="Top" Width="75" Height="27"/>
+        <TextBox x:Name="unamebox" HorizontalAlignment="Left" Height="27" Margin="170,266,0,0" TextWrapping="Wrap" Text="Please put Beam.pro username here." VerticalAlignment="Top" Width="260"/>
+
     </Grid>
 </Window>
