--- a/BeamCounter/MainWindow.xaml
+++ b/BeamCounter/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeamCounter"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Beam Counter Made By R3ido101 and Serializer. version 0.0.1 " Height="350" Width="525">
     <Grid Margin="0,0,2,2">
         <Label x:Name="viewer" Content="Viewer Count" HorizontalAlignment="Left" Margin="34,38,0,0" VerticalAlignment="Top"/>
         <Label x:Name="follow" Content="Follower Count" HorizontalAlignment="Left" Margin="30,84,0,0" VerticalAlignment="Top" Width="92" Height="24"/>
